# apple-music-discord-rpc

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  main.rs
src/handlers/: discord.rs  mod.rs  music_artwork.rs  music_player.rs
src/models/: mod.rs  music_artwork.rs  music_props.rs
src/observer/: mod.rs  mp_observer.rs
src/utils/: mod.rs  string.rs
